# image-recognition

./: .env.test  .env.test.local  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
database/: models.py
resources/: imagga_api.py  utils.py
routes/: images.py
templates/: demo.html  image.html  images.html
tests/: BaseCase.py  test_get_images.py  test_imagga_api.py  test_upload_image.py
